# mallet

./: .gitignore  Cargo.toml  flake.nix  map.mmap  test.mmap
assets/: base_content.lib  map.mmap  media.db
assets/base_content/: media.db
src/: action.rs  app_data.rs  bsp.rs  camera.rs  core.rs  editor.rs  experimental.rs  freelook.rs  game.rs  id.rs  input_binding.rs  keybinds.rs  main.rs  map.rs  selection.rs  util.rs  view.rs
src/core/: app_data.rs  asset_storer.rs  binds.rs  content.rs  content_asdf.rs  db.rs  input_binding.rs  map.rs  media.rs  view.rs
src/core/map/: assets.rs  brush.rs  changes.rs  dto.rs  elements.rs  history.rs  library.rs  light.rs  nodes.rs  states.rs
src/core/map/elements/: brush.rs  light.rs
src/core/map/nodes/: light.rs
src/core/media/: dto.rs  surface.rs  watch.rs
src/editor/: actions.rs  cursor.rs  freelook.rs  selection.rs  tools.rs  ui.rs
src/editor/selection/: visuals.rs
src/experimental/: asset_storer.rs  map.rs  map_as_asset.rs  sled_backed_map.rs
src/experimental/map/: changes.rs  db.rs  elements.rs  history.rs  states.rs
src/game/: actor.rs
src/map/: brush.rs
test.db/: db  snap.0000000000000510
