[package]
name = "mallet"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.2.1"
bevy = { version = "0.15.3", features = ["wayland"] }
bimap = "0.6.3"
color-eyre = "0.6.3"
daggy = { version = "0.9.0", features = ["serde-1"] }
directories = "6.0.0"
itertools = "0.14.0"
petgraph = { version = "0.8.1", features = ["serde-1", "serde_derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
rand = "0.9.1"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
strum = "0.27.1"
ulid = { version = "1.2.1", features = ["serde"] }
wyrand = "0.3.2"
