[package]
name = "mallet"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# avian3d = "0.2.1"
avian3d = { git = "https://github.com/Jondolf/avian.git", branch = "main" }
bevy = { version = "0.16.0", features = ["dynamic_linking", "wayland"] }
bimap = "0.6.3"
blake3 = { version = "1.8.2", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.3"
daggy = { version = "0.9.0", features = ["serde-1"] }
directories = "6.0.0"
itertools = "0.14.0"
notify = "8.0.0"
petgraph = { version = "0.8.1", features = ["serde-1", "serde_derive"] }
postcard = { version = "1.1.1", features = ["use-std"] }
rand = "0.9.1"
ron = { version = "0.10.1", features = ["integer128"] }
serde = { version = "1.0.219", features = ["derive"] }
sled = "0.34.7"
strum = "0.27.1"
thiserror = "2.0.12"
time = "0.3.41"
ulid = { version = "1.2.1", features = ["serde"] }
walkdir = "2.5.0"
wyrand = "0.3.2"
